Prod-EU/force-app/main/default/objects/Marketing_Interaction__c/Marketing_Interaction__c.object-meta.xml
<CustomObject>
    <description>Object used to trigger journeys in Marketing Cloud.</description>
    <label>Marketing Interaction</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Marketing Interaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Interactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>