Prod-EU/force-app/main/default/objects/Marketing_Interaction__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Marketing Interactions</relationshipLabel>
    <relationshipName>Marketing_Interactions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>