Prod-EU/force-app/main/default/objects/Marketing_Interaction__c/fields/Communication_Type__c.field-meta.xml
<CustomField>
    <fullName>Communication_Type__c</fullName>
    <label>Communication Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CA - Customer Onboarding</fullName>
            </value>
            <value>
                <fullName>CA - Product Onboarding - G5</fullName>
            </value>
            <value>
                <fullName>CA - Reorder Reminder - G5</fullName>
            </value>
            <value>
                <fullName>CA - Product Onboarding - G6</fullName>
            </value>
            <value>
                <fullName>CA - Reorder Reminder - G6 Starter Kit</fullName>
            </value>
            <value>
                <fullName>CA - Subscription Renewal - Signature</fullName>
            </value>
            <value>
                <fullName>CA - Subscription Renewal - Auto</fullName>
            </value>
            <value>
                <fullName>CA - Subscription Upsell - G6</fullName>
            </value>
            <value>
                <fullName>UKIE - Customer Onboarding - G6</fullName>
            </value>
            <value>
                <fullName>UKIE - Customer Review</fullName>
            </value>
            <value>
                <fullName>UKIE - Warrior Recruitment</fullName>
            </value>
            <value>
                <fullName>UKIE - Subscription Renewal - G6</fullName>
            </value>
            <value>
                <fullName>UKIE - Subscription Upsell - G6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>