Prod-EU/force-app/main/default/objects/Marketing_Interaction__c/fields/Related_Information__c.field-meta.xml
<CustomField>
    <fullName>Related_Information__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Related Information</label>
    <length>40</length>
    <type>Text</type>
</CustomField>