Prod-EU/force-app/main/default/objects/Marketing_Interaction__c/fields/Source_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Record_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Source Record Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>